START TRANSACTION;
CREATE TABLE "Clients" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Title" text NOT NULL,
    "RegistrationCode" text NOT NULL,
    "VAT" text NOT NULL,
    "AddressStreet" text NOT NULL,
    "AddressCity" text NOT NULL,
    "AddressZipCode" text NOT NULL,
    "Email" text NOT NULL,
    "PhoneNumber" text NOT NULL,
    CONSTRAINT "PK_Clients" PRIMARY KEY ("Id")
);

CREATE TABLE "Products" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Title" text NOT NULL,
    "Price" money NOT NULL,
    "AvailableQuantity" integer NOT NULL,
    CONSTRAINT "PK_Products" PRIMARY KEY ("Id")
);

CREATE TABLE "Invoices" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Title" text NOT NULL,
    "Markup" integer NOT NULL DEFAULT 0,
    "Discount" money NOT NULL,
    "Notes" text NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "ClientId" integer NOT NULL,
    CONSTRAINT "PK_Invoices" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Invoices_Clients_ClientId" FOREIGN KEY ("ClientId") REFERENCES "Clients" ("Id") ON DELETE CASCADE
);

CREATE TABLE "InvoiceProducts" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Title" text NOT NULL,
    "Price" money NOT NULL,
    "Quantity" integer NOT NULL,
    "InvoiceId" integer NOT NULL,
    "ProductId" integer NOT NULL,
    CONSTRAINT "PK_InvoiceProducts" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_InvoiceProducts_Invoices_InvoiceId" FOREIGN KEY ("InvoiceId") REFERENCES "Invoices" ("Id") ON DELETE CASCADE,
    CONSTRAINT "FK_InvoiceProducts_Products_ProductId" FOREIGN KEY ("ProductId") REFERENCES "Products" ("Id") ON DELETE CASCADE
);

CREATE TABLE "Payments" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Amount" money NOT NULL,
    "Date" timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "Method" text NOT NULL,
    "InvoiceId" integer NOT NULL,
    CONSTRAINT "PK_Payments" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Payments_Invoices_InvoiceId" FOREIGN KEY ("InvoiceId") REFERENCES "Invoices" ("Id") ON DELETE CASCADE
);

CREATE UNIQUE INDEX "IX_Clients_Email" ON "Clients" ("Email");

CREATE UNIQUE INDEX "IX_Clients_RegistrationCode" ON "Clients" ("RegistrationCode");

CREATE INDEX "IX_InvoiceProducts_InvoiceId" ON "InvoiceProducts" ("InvoiceId");

CREATE INDEX "IX_InvoiceProducts_ProductId" ON "InvoiceProducts" ("ProductId");

CREATE INDEX "IX_Invoices_ClientId" ON "Invoices" ("ClientId");

CREATE INDEX "IX_Payments_InvoiceId" ON "Payments" ("InvoiceId");

COMMIT;